--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -97,6 +97,7 @@ a {
 
 .nav-link {
     color: #ffffff;
+    font-weight: 600;
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -104,7 +105,7 @@ a {
  
   .nav-link:hover {
     color: #962020;
-    text-decoration: underline;
+    /* text-decoration: underline; */
   }
 
   .bg-light {
@@ -434,6 +435,11 @@ a.product-name:hover, a.product-name:focus {
     border-radius: 20px;
     padding-left: 0;
     padding-right: 0;
+}
+
+.text-center {
+    color: #ffffff;
+    font-weight: 800;
 }
 
 table td, table th {
