--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -105,7 +105,7 @@ a {
  
   .nav-link:hover {
     color: #962020;
-    /* text-decoration: underline; */
+    
   }
 
   .bg-light {
@@ -197,6 +197,7 @@ a.product-name:hover, a.product-name:focus {
 }
 
 .product-price {
+    color: #000000;
     font-size: 24px;
     font-weight: 600;
 }
